Fix spillover in Train overview

--- a/frontend/src/components/search/Search.css
+++ b/frontend/src/components/search/Search.css
@@ -7,7 +7,6 @@
   width: 100%;
 }
 .Search h2 {
-  font-size: 19px;
   font-weight: 200;
 }
 
